feat: implement reports feature
